--- a/todoApp.html
+++ b/todoApp.html
@@ -29,7 +29,10 @@
       console.log(todos);
     }
 
-    
+    function remove(position){
+      todos.splice(position);
+      console.log(todos);
+    }
 
   </script>
 </body>
