--- a/todoApp.html
+++ b/todoApp.html
@@ -34,6 +34,14 @@
       console.log(todos);
     }
 
+    function toggle(position){
+      if (todos[position].completed === false){
+        todos[position].completed = true;
+      } else{
+        todod[position].completed = false;
+      }
+    }
+
   </script>
 </body>
 </html>
