--- a/todoApp.html
+++ b/todoApp.html
@@ -40,7 +40,11 @@
       } else{
         todod[position].completed = false;
       }
+
+      console.log(todos);
     }
+
+   
 
   </script>
 </body>
