--- a/todoApp.html
+++ b/todoApp.html
@@ -28,27 +28,49 @@
 
 
 
-                  //Version 2
+//                   //Version 2
 
-    var todos =  ['Item 1', 'Item 2', 'Item 3'];
+//     var todos =  ['Item 1', 'Item 2', 'Item 3'];
 
-// [] It should have a function to add a Todo
-    function addTodo(newTodo){
-      todos.push(newTodo);
-      console.log(todos);
-    }
+// // [X] It should have a function to add a Todo
+//     function addTodo(newTodo){
+//       todos.push(newTodo);
+//       console.log(todos);
+//     }
   
-// [] It should have a function to edit a Todo
-    function editTodo(position, newTodo){
-      todos[position] = newTodo;
-      console.log(todos);
-    }
+// // [X] It should have a function to edit a Todo
+//     function editTodo(position, newTodo){
+//       todos[position] = newTodo;
+//       console.log(todos);
+//     }
 
-// [] It should have a function to remove a Todo
-    function removeTodo(position){
-      todos.splice(position, 1);
-      console.log(todos);
-    }
+// // [X] It should have a function to remove a Todo
+//     function removeTodo(position){
+//       todos.splice(position, 1);
+//       console.log(todos);
+//     }
+
+
+              //Version 3
+
+// [] We should Initialize the todos variable with objects
+  var todos = [
+    {todoText:"Item 1", completed:false},
+    {todoText:"Item 2", completed:false},
+    {todoText:"Item 3", completed:false}
+  ];
+
+// [X] The add function should add objects
+  function addTodo(newTodo){
+    todos.push({todoText:newTodo, completed: false});
+    console.log(todos);
+  }
+
+// [] The edit function should edit objects
+  function editTodo(position, newTodo){
+    todos[position].todoText = newTodo;
+    console.log(todos);
+  }
 
   </script>
 </body>
